2014-05-30  6.8.9-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-2, SVN revision 15932.

2014-05-18  6.8.9-2 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed some bugs in the PNG codec discovered by coverity analysis.

2014-05-14  6.8.9-2 Cristy  <quetzlzacatenango@image...>
  * The -fx equality operator returns a proper boolean result now (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25580).
  * Permit spaces in the gradient color specification (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25614).
  * Fix IdentifyImage() crash when image->magick member is null (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25615).
  * The -format M and Y channels are no longer reversed (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25633).
  * Remove Makefile race condition where two targets attempt to install
    magick-baseconfig.h (reference
		http://git.buildroot.net/buildroot/commit/?id=7395ee9d3b88e45798143e05a28d6d4b51409130)
  * Fix memory leak in BlobToStringInfo() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25639).
  * In certain cases, -adaptive-sharpen failed to sharpen (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23211

2014-05-12  6.8.9-2 Dirk Lemstra <dirk@snakeware...>
  * Bump major Magick++ library version.
  * Added support for writing RLE compressed TGA files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=12335).
  * Improved performance of parsing the xmp profile (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25612).
  * Fixed detecting transparency in PSD files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25634).

2014-05-09  6.8.9-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-1, SVN revision 15697.
