@@ -316,7 +316,7 @@ WandExport MagickBooleanType AnimateImageCommand(ImageInfo *image_info,
           (LocaleCompare("-version",option+1) == 0))
         {
           ListMagickVersion(stdout);
-          return(MagickFalse);
+          return(MagickTrue);
         }
     }
   status=MagickTrue;
