@@ -457,7 +457,7 @@ WandExport MagickBooleanType CompositeImageCommand(ImageInfo *image_info,
           (LocaleCompare("-version",option+1) == 0))
         {
           ListMagickVersion(stdout);
-          return(MagickFalse);
+          return(MagickTrue);
         }
     }
   if (argc < 4)
