@@ -269,7 +269,7 @@ WandExport MagickBooleanType ConjureImageCommand(ImageInfo *image_info,
             (LocaleCompare("-version",option+1) == 0))
           {
             ListMagickVersion(stdout);
-            return(MagickFalse);
+            return(MagickTrue);
           }
         /*
           Persist key/value pair.
