@@ -555,7 +555,7 @@ WandExport MagickBooleanType ConvertImageCommand(ImageInfo *image_info,
           (LocaleCompare("-version",option+1) == 0))
         {
           ListMagickVersion(stdout);
-          return(MagickFalse);
+          return(MagickTrue);
         }
     }
   if (argc < 3)
