@@ -363,7 +363,7 @@ WandExport MagickBooleanType DisplayImageCommand(ImageInfo *image_info,
           (LocaleCompare("-version",option+1) == 0))
         {
           ListMagickVersion(stdout);
-          return(MagickFalse);
+          return(MagickTrue);
         }
     }
   SetNotifyHandlers;
