@@ -311,7 +311,7 @@ WandExport MagickBooleanType ImportImageCommand(ImageInfo *image_info,
           (LocaleCompare("-version",option+1) == 0))
         {
           ListMagickVersion(stdout);
-          return(MagickFalse);
+          return(MagickTrue);
         }
     }
   display=(Display *) NULL;
